<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#48D0B0">

        <TextView
            android:id="@+id/bulbassauro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="50dp"
            android:text="@string/bulbassauro"
            android:textColor="@color/white"
            android:textSize="47sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/botaograma"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/arredondargrama"
                android:text="@string/grass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/botaovenenoso"
                android:layout_width="156dp"
                android:layout_height="44dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/arrendodarcima"
                android:text="@string/venous"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagebulba"
                android:layout_width="242dp"
                android:layout_height="255dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/bulda" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#48D0B0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/arredondar">

            <TextView
                android:id="@+id/botaosobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/about"
                android:textColor="#555555"
                android:textSize="27sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/arrendondaralt"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="40dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/altura"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="34dp"
                        android:text="@string/height"
                        android:textColor="#555555"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/peso"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="79dp"
                        android:text="@string/weight"
                        android:textColor="#555555"
                        android:textSize="25sp"
                        android:textStyle="italic" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="9dp">

                    <TextView
                        android:id="@+id/a70"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="39dp"
                        android:text="@string/height70cm"
                        android:textColor="#555555"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/p6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="82dp"
                        android:text="@string/weight6_9kg"
                        android:textColor="#555555"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/treino"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/training"
                android:textColor="#555555"
                android:textSize="27sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="39dp">

                <TextView
                    android:id="@+id/base"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Xp"
                    android:textColor="#555555"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/xp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="45dp"
                    android:text="@string/Xp64"
                    android:textColor="#555555"
                    android:textSize="24sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

   </ScrollView>
